# comm-isolate

./: Cargo.toml  README.md  config.sample.toml  schema.sql
.github/workflows/: lint.yaml  rust.yml
comm-common/: Cargo.toml  README.md  config.toml
comm-common/.github/workflows/: rust.yml
comm-common/src/: auth.rs  config.rs  credentials.rs  error.rs  jwt.rs  lib.rs  session.rs  templates.rs  translations.rs  types.rs  util.rs
comm-common/src/templates/: base.html  credentials.html  expired.html  login.html  logout.html  not_found.html
comm-plugin/: Cargo.toml  README.md  config.sample.toml
comm-plugin/attribute-ui/: attribute.css  index.html
comm-plugin/src/: main.rs
rocket_oauth2/: Cargo.toml
rocket_oauth2/src/: config.rs  lib.rs
src/: auth.rs  config.rs  credentials.rs  error.rs  jwt.rs  lib.rs  main.rs  session.rs  templates.rs  translations.rs  types.rs
src/templates/: attribute.css  attribute.js  base.html  credentials.html  footer.html  login.html  logout_form.html  macros.html  none_in_room.html
