[package]
name = "verder-helpen-comm-isolate"
version = "0.1.0"
edition = "2021"

[features]
default = ["auth_during_comm", "platform_token", "session_db"]
auth_during_comm = ["platform_token"]
platform_token = []
sentry = ["dep:verder-helpen-sentry"]
session_db = ["platform_token"]

[dependencies]
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
verder-helpen-sentry = { git = "https://github.com/verder-helpen/verder-helpen-sentry.git", optional = true }
accept-language = "2.0.0"
josekit = "0.8.2"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_oauth2 = { git = "https://github.com/arjentz/rocket_oauth2.git", rev = "214efa99b0bd95c0df4d3f3d4c6235ae25610e37" }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["postgres_pool"] }
serde = "1.0.159"
serde_json = "1.0.95"
serde_yaml = "0.9.19"
strum = "0.24.1"
strum_macros = "0.24.3"
tera = "1.18.1"
thiserror = "1.0.40"
unic-langid = "0.9.1"

[dev-dependencies]
figment = { version = "0.10.8", features = ["env", "toml", "json"] }
serial_test = "2.0.0"
tokio-test = "0.4.2"
